Fixed ProductsInfo Dropdown Menu alignment

--- a/Product-Database/Styles/CommonLayout.css
+++ b/Product-Database/Styles/CommonLayout.css
@@ -160,7 +160,8 @@ Shopping Cart layout
 #DropDownMenu
 {
 	width: 100px;
-	margin-left: 15px;
+	margin-left: 210px;
+	margin-top: -35px;
 	padding: 5px 5px 5px 5px;
 	position: relative;
 	background-color: #191919;
